# audit-version-py

./: .gitignore  README.rst  pyproject.toml
src/audit_version/: __init__.py
src/auto_version/: __init__.py
tests/: __init__.py  test_audit_version.py  test_auto_version.py  test_cli.py
