[tool.poetry]
name = "audit_version"
version = "0.1.0"
description = "Audit public interface for Python projects and suggest next semantic version"
authors = ["Geoffrey Lentner <glentner@purdue.edu>"]
readme = "README.rst"
homepage = "https://audit-version.readthedocs.io"
documentation = "https://audit-version.readthedocs.io"
repository = "https://github.com/glentner/audit-version-py"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Version Control",
]

[tool.poetry.scripts]
audit-version = 'audit_version:main'

[tool.poetry.dependencies]
python = "^3.10"
cmdkit = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
hypothesis = "^6.54.4"
ipython = "^8.4.0"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = ["--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

